# TensorScript

./: CMakeLists.txt  README.md
include/: math.hpp  operation.hpp  tensor.hpp
src/: math.cpp  tensor.cpp
test/: CMakeLists.txt  math.cpp  tensor.cpp
